force-app/main/default/objects/Service_Account_Relationship__c/Service_Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Service Account Relationship</label>
    <nameField>
        <displayFormat>SACR-{0000000}</displayFormat>
        <label>Service Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>