force-app/main/default/objects/Service_Account_Relationship__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>It determines if a service account relationship is active or not</description>
    <formula>IF( Association_Start_Date__c &lt;= TODAY() &amp;&amp;  (Association_End_Date__c &gt; TODAY() || ISNULL(Association_End_Date__c)), true, false)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>