force-app/main/default/objects/Service_Account_Relationship__c/fields/Association_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Association_End_Date__c</fullName>
    <label>Association End Date</label>
    <type>Date</type>
</CustomField>