force-app/main/default/objects/Service_Account_Relationship__c/fields/Association_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Association_Start_Date__c</fullName>
    <label>Association Start Date</label>
    <type>Date</type>
</CustomField>