force-app/main/default/objects/Service_Account_Relationship__c/fields/Care_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Sub_Type__c</fullName>
    <formula>TEXT( Service_Name__r.Service_Care_Sub_Type__c )</formula>
    <label>Care Sub Type</label>
    <type>Text</type>
</CustomField>