force-app/main/default/objects/Service_Account_Relationship__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <formula>Text(Service_Name__r.Care_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Type</label>
    <type>Text</type>
</CustomField>