force-app/main/default/objects/Service_Account_Relationship__c/fields/Ceased_Places__c.field-meta.xml
<CustomField>
    <fullName>Ceased_Places__c</fullName>
    <formula>Service_Name__r.GPMS_Ceased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceased Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>