force-app/main/default/objects/Service_Account_Relationship__c/fields/Child_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Child_Integration_ID__c</fullName>
    <formula>Service_Name__r.Integration_ID__c</formula>
    <label>Service Integration ID</label>
    <type>Text</type>
</CustomField>