force-app/main/default/objects/Service_Account_Relationship__c/fields/Comments_Service__c.field-meta.xml
<CustomField>
    <fullName>Comments_Service__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>