force-app/main/default/objects/Service_Account_Relationship__c/fields/CountArchRegDecision__c.field-meta.xml
<CustomField>
    <fullName>CountArchRegDecision__c</fullName>
    <description>This field will take the number value of  how many Archived Regulatory Decision Count for each service - will be updated by a trigger</description>
    <label>Archived Regulatory Decision Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>