force-app/main/default/objects/Service_Account_Relationship__c/fields/CurrentNonCurrentRegDec__c.field-meta.xml
<CustomField>
    <fullName>CurrentNonCurrentRegDec__c</fullName>
    <description>Stores count of non-current regulatory decisions which are flagged as relevant to rating. Value is updated when a new Regulatory Decision is created or existing decision is removed.</description>
    <label>Non Current Reg Dec Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>