force-app/main/default/objects/Service_Account_Relationship__c/fields/DoesService_have_Active_Provider__c.field-meta.xml
<CustomField>
    <fullName>DoesService_have_Active_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Service have Active Provider?</label>
    <type>Checkbox</type>
</CustomField>