force-app/main/default/objects/Service_Account_Relationship__c/fields/GPMS_Link_To_Document__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Link_To_Document__c</fullName>
    <description>User can enter Trim reference</description>
    <label>Link to Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>