force-app/main/default/objects/Service_Account_Relationship__c/fields/Inactive_Places__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Places__c</fullName>
    <formula>Service_Name__r.Inactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>