force-app/main/default/objects/Service_Account_Relationship__c/fields/Most_Recent_CER__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_CER__c</fullName>
    <description>Field set during CER Record creation, used in the Extant Record Logic</description>
    <label>Most Recent CER</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>