force-app/main/default/objects/Service_Account_Relationship__c/fields/Offline_Places__c.field-meta.xml
<CustomField>
    <fullName>Offline_Places__c</fullName>
    <formula>Service_Name__r.Offline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offline Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>