force-app/main/default/objects/Service_Account_Relationship__c/fields/Operational_Places__c.field-meta.xml
<CustomField>
    <fullName>Operational_Places__c</fullName>
    <formula>Service_Name__r.Operational__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operational Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>