force-app/main/default/objects/Service_Account_Relationship__c/fields/Parent_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Integration_ID__c</fullName>
    <formula>Provider_Name__r.Integration_ID__c</formula>
    <label>Integration ID</label>
    <type>Text</type>
</CustomField>