force-app/main/default/objects/Service_Account_Relationship__c/fields/RACS_ID__c.field-meta.xml
<CustomField>
    <fullName>RACS_ID__c</fullName>
    <formula>Service_Name__r.RACS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RACS ID</label>
    <type>Text</type>
</CustomField>