force-app/main/default/objects/Service_Account_Relationship__c/fields/Reason_Provider__c.field-meta.xml
<CustomField>
    <fullName>Reason_Provider__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>