force-app/main/default/objects/Service_Account_Relationship__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Name</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Provider Details</relationshipLabel>
    <relationshipName>Service_Account_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>