force-app/main/default/objects/Service_Account_Relationship__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <formula>TEXT( Service_Name__r.Status__c )</formula>
    <label>Service Status</label>
    <type>Text</type>
</CustomField>