force-app/main/default/objects/Service_Account_Relationship__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>TEXT(Service_Name__r.Physical_Address_Location__r.Address__r.State_Province__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>