force-app/main/default/objects/Service_Account_Relationship__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <formula>Service_Name__r.Physical_Address_Location__r.Address__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suburb</label>
    <type>Text</type>
</CustomField>