force-app/main/default/objects/Service_Account_Relationship__c/recordTypes/Provider_to_Service.recordType-meta.xml
<RecordType>
    <fullName>Provider_to_Service</fullName>
    <active>true</active>
    <label>Provider to Service</label>
</RecordType>