force-app/main/default/objects/Service_Account_Relationship__c/recordTypes/Provider_to_Service_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Provider_to_Service_Read_Only</fullName>
    <active>true</active>
    <label>Provider to Service Read Only</label>
</RecordType>